feat: 实现用户认证与存储功能增强
- 添加用户注册、登录界面及功能
- 实现用户表RLS策略修复脚本
- 新增图片上传与存储管理功能
- 优化导航栏添加发帖按钮
- 完善用户认证流程与错误处理
- 添加存储策略管理脚本
- 实现图片压缩与验证工具
- 优化API端点错误处理

refactor: 重构认证组件与API路由

- 重构AuthForm组件使用AuthProvider
- 优化登录/注册API错误处理
- 重构用户信息获取逻辑

fix: 修复关联查询与RLS策略问题

- 修复用户表关联查询问题
- 修正存储桶RLS策略
- 解决认证流程中的用户记录创建问题

docs: 更新TODO列表进度

style: 调整首页标题文本

--- a/todo
+++ b/todo
@@ -1,11 +1,11 @@
 从Supabase获取并渲染数据 √
 当点击模型展示卡片时，从当页打开帖子详情页 √
-用户注册与登录界面
+用户注册与登录界面 √
 用户发帖功能
 用户可以粘贴模型的捏脸数据（json格式），系统会保存到数据库内
 上传模型展示图片功能
+用户自行添加tags系统
 一键复制JSON数据功能
 点赞与评论系统
-用户自行添加tags系统
 模型展示分区
 响应式优化&部署到Vercel
