--- a/todo
+++ b/todo
@@ -1,11 +1,13 @@
 从Supabase获取并渲染数据 √
 当点击模型展示卡片时，从当页打开帖子详情页 √
 用户注册与登录界面 √
-用户发帖功能
-用户可以粘贴模型的捏脸数据（json格式），系统会保存到数据库内
-上传模型展示图片功能
-用户自行添加tags系统
+用户发帖功能 √
+用户可以粘贴模型的捏脸数据（json格式），系统会保存到数据库内 √
+上传模型展示图片功能 √
+用户自行添加tags系统 √
+多张图片上传功能
 一键复制JSON数据功能
-点赞与评论系统
+详情页灯箱功能，主页卡片展示第一张图片
+收藏点赞与评论系统
 模型展示分区
 响应式优化&部署到Vercel
