--- a/todo
+++ b/todo
@@ -5,9 +5,9 @@
 用户可以粘贴模型的捏脸数据（json格式），系统会保存到数据库内 √
 上传模型展示图片功能 √
 用户自行添加tags系统 √
-多张图片上传功能
-一键复制JSON数据功能
-详情页灯箱功能，主页卡片展示第一张图片
+多张图片上传功能 √
+一键复制JSON数据功能 √
+详情页灯箱功能，主页卡片展示第一张图片 √
 收藏点赞与评论系统
 模型展示分区
 响应式优化&部署到Vercel
